--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+# illustrator-files
+*.ai
+# google drive things
+desktop.ini
